- added version to projects - update firmware programming docs

--- a/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj
+++ b/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj
@@ -87,4 +87,8 @@
     <ClInclude Include="..\stm32\stm32wbxx_ll_utils.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_wwdg.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\programming.txt" />
+    <Text Include="..\version.txt" />
+  </ItemGroup>
 </Project>
