--- a/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
+++ b/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
@@ -92,4 +92,8 @@
       <Filter>stm32</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\programming.txt" />
+    <Text Include="..\version.txt" />
+  </ItemGroup>
 </Project>
