--- a/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj
+++ b/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj
@@ -88,4 +88,7 @@
     <ClInclude Include="..\stm32\stm32l4xx_ll_usart.h" />
     <ClInclude Include="..\stm32\stm32l4xx_ll_utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\version.txt" />
+  </ItemGroup>
 </Project>
