--- a/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj.filters
+++ b/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj.filters
@@ -95,4 +95,7 @@
       <Filter>stm32</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\version.txt" />
+  </ItemGroup>
 </Project>
