--- a/software/line-sensor/src-data-collector/src-data-collector.csproj
+++ b/software/line-sensor/src-data-collector/src-data-collector.csproj
@@ -119,13 +119,19 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="shared\BaseCommandWithParameter.cs" />
+    <Compile Include="shared\BooleanNotConverter.cs" />
+    <Compile Include="ui\BleDeviceConnectDisconnectCommand.cs" />
     <Compile Include="ui\BleDeviceModel.cs" />
+    <Compile Include="ui\ConnectedBleDeviceModel.cs" />
+    <Compile Include="ui\ConnectedSerialDeviceModel.cs" />
     <Compile Include="ui\IDeviceModel.cs" />
     <Compile Include="ui\MainModel.cs" />
     <Compile Include="ui\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ui\SerialDeviceConnectDisconnectCommand.cs" />
     <Compile Include="ui\SerialDeviceModel.cs" />
   </ItemGroup>
   <ItemGroup>
