--- a/software/line-sensor/src-data-collector/src-data-collector.csproj
+++ b/software/line-sensor/src-data-collector/src-data-collector.csproj
@@ -119,13 +119,18 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="logic\IWirelessLineSensor.cs" />
+    <Compile Include="logic\PositionController.cs" />
+    <Compile Include="logic\WirelessLineSensor.cs" />
     <Compile Include="shared\BaseCommandWithParameter.cs" />
     <Compile Include="shared\BooleanNotConverter.cs" />
     <Compile Include="ui\BleDeviceConnectDisconnectCommand.cs" />
     <Compile Include="ui\BleDeviceModel.cs" />
-    <Compile Include="ui\ConnectedBleDeviceModel.cs" />
-    <Compile Include="ui\ConnectedSerialDeviceModel.cs" />
+    <Compile Include="ui\BleDeviceWatcher.cs" />
+    <Compile Include="ui\ConnectedWirelessLineSensorDeviceModel.cs" />
+    <Compile Include="ui\ConnectedPositionControllerDeviceModel.cs" />
     <Compile Include="ui\IDeviceModel.cs" />
+    <Compile Include="logic\IPositionController.cs" />
     <Compile Include="ui\MainModel.cs" />
     <Compile Include="ui\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -133,6 +138,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ui\SerialDeviceConnectDisconnectCommand.cs" />
     <Compile Include="ui\SerialDeviceModel.cs" />
+    <Compile Include="ui\SerialDeviceWatcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
