--- a/software/line-sensor-wireless-interface/prj-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
+++ b/software/line-sensor-wireless-interface/prj-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
@@ -42,7 +42,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-utils\stm32;$(ProjectDir)\..\src-utils\application;$(ProjectDir)\..\src-utils\ble;$(ProjectDir)\..\src-utils\ble\core;$(ProjectDir)\..\src-utils\ble_thread;$(ProjectDir)\..\src-utils\ble_thread\tl;$(ProjectDir)\..\src-utils\ble_thread\schi;$(ProjectDir)\..\src-utils\cmsis;$(ProjectDir)\..\src-utils\utilities;$(ProjectDir)\..\src-utils\sequencer;$(ProjectDir)\..\src-utils\tiny_lpm;$(ProjectDir)\..\src-utils;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\src-utils\stm32;$(ProjectDir)\..\src-utils\application;$(ProjectDir)\..\src-utils\ble;$(ProjectDir)\..\src-utils\ble\core;$(ProjectDir)\..\src-utils\ble_thread;$(ProjectDir)\..\src-utils\ble_thread\tl;$(ProjectDir)\..\src-utils\ble_thread\schi;$(ProjectDir)\..\src-utils\cmsis;$(ProjectDir)\..\src-utils\utilities;$(ProjectDir)\..\src-utils\sequencer;$(ProjectDir)\..\src-utils\tiny_lpm;$(ProjectDir)\..\src-utils;$(SolutionDir)\common\lib-stm32wb;$(SolutionDir)\line-sensor\inc;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG=1;USE_STM32WBXX_NUCLEO=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -55,7 +55,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-utils\stm32;$(ProjectDir)\..\src-utils\application;$(ProjectDir)\..\src-utils\ble;$(ProjectDir)\..\src-utils\ble\core;$(ProjectDir)\..\src-utils\ble_thread;$(ProjectDir)\..\src-utils\ble_thread\tl;$(ProjectDir)\..\src-utils\ble_thread\schi;$(ProjectDir)\..\src-utils\cmsis;$(ProjectDir)\..\src-utils\utilities;$(ProjectDir)\..\src-utils\sequencer;$(ProjectDir)\..\src-utils\tiny_lpm;$(ProjectDir)\..\src-utils;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\src-utils\stm32;$(ProjectDir)\..\src-utils\application;$(ProjectDir)\..\src-utils\ble;$(ProjectDir)\..\src-utils\ble\core;$(ProjectDir)\..\src-utils\ble_thread;$(ProjectDir)\..\src-utils\ble_thread\tl;$(ProjectDir)\..\src-utils\ble_thread\schi;$(ProjectDir)\..\src-utils\cmsis;$(ProjectDir)\..\src-utils\utilities;$(ProjectDir)\..\src-utils\sequencer;$(ProjectDir)\..\src-utils\tiny_lpm;$(ProjectDir)\..\src-utils;$(SolutionDir)\common\lib-stm32wb;$(SolutionDir)\line-sensor\inc;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NDEBUG=1;RELEASE=1;USE_STM32WBXX_NUCLEO=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
