--- a/software/line-sensor/prj-test-client-stm32l476rg/stm32.props
+++ b/software/line-sensor/prj-test-client-stm32l476rg/stm32.props
@@ -9,18 +9,18 @@
 <!-- In order to build this project manually (outside VisualGDB), please provide TOOLCHAIN_ROOT, BSP_ROOT, EFP_BASE and TESTFW_BASE variables via Environment or Make command line -->
 	<ItemDefinitionGroup>
 		<ClCompile>
-			<PreprocessorDefinitions>ARM_MATH_CM4;flash_layout;STM32L496ZE;STM32L496xx;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
-			<AdditionalIncludeDirectories>%(ClCompile.AdditionalIncludeDirectories);$(ProjectDir);$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Core/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Device/ST/STM32L4xx/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/RTOS2/Include</AdditionalIncludeDirectories>
+			<PreprocessorDefinitions>ARM_MATH_CM4;flash_layout;STM32L476RG;STM32L476xx;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
+			<AdditionalIncludeDirectories>%(ClCompile.AdditionalIncludeDirectories);$(ProjectDir);$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Device/ST/STM32L4xx/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Core/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Include</AdditionalIncludeDirectories>
 		</ClCompile>
 	</ItemDefinitionGroup>
 	<ItemDefinitionGroup>
 		<Link>
-			<LinkerScript Condition="'%(Link.LinkerScript)' == ''">$(BSP_ROOT)/STM32L4xxxx/LinkerScripts/STM32L496ZE_flash.lds</LinkerScript>
+			<LinkerScript Condition="'%(Link.LinkerScript)' == ''">$(BSP_ROOT)/STM32L4xxxx/LinkerScripts/STM32L476RG_flash.lds</LinkerScript>
 			<AdditionalOptions>--specs=nano.specs --specs=nosys.specs %(Link.AdditionalOptions)</AdditionalOptions>
 		</Link>
 	</ItemDefinitionGroup>
 	<PropertyGroup>
-		<DefaultLinkerScript>$(BSP_ROOT)/STM32L4xxxx/LinkerScripts/STM32L496ZE_flash.lds</DefaultLinkerScript>
+		<DefaultLinkerScript>$(BSP_ROOT)/STM32L4xxxx/LinkerScripts/STM32L476RG_flash.lds</DefaultLinkerScript>
 	</PropertyGroup>
 
 	<ItemDefinitionGroup>
