- fixed SPI communications a bit (filler is now fixed to 32 bits for slow to 2.5 MBits/s speeds) - SPI device will now work on the same bus with other devices (it gets properly started and stopped based on NSS pin input) - added missing copyright statements

--- a/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
+++ b/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="..\src\global_data.c" />
     <ClCompile Include="..\src\gpio.c" />
     <ClCompile Include="..\src\main.c" />
+    <ClCompile Include="..\src\simple_tasks.c" />
     <ClCompile Include="..\src\spi.c" />
     <ClCompile Include="..\src\status.c" />
     <ClCompile Include="..\src\system_clocks.c" />
@@ -104,6 +105,8 @@
     <ClInclude Include="..\src\global_settings.h" />
     <ClInclude Include="..\src\gpio.h" />
     <ClInclude Include="..\src\interrupt_priorities.h" />
+    <ClInclude Include="..\src\mcu.h" />
+    <ClInclude Include="..\src\simple_tasks.h" />
     <ClInclude Include="..\src\spi.h" />
     <ClInclude Include="..\src\status.h" />
     <ClInclude Include="..\src\system_clocks.h" />
